fix task BC-3449